@@ -1,5 +1,5 @@
 DIST magus-1.3.3.tar.bz2 7417528 RMD160 c2dc25fa45523f18dcce511c7697463a004aa083 SHA1 4d61a814d92f69f2d562e4809268e7c0fd205520 SHA256 14d75aba616149e52252fe0f1d0bae796936295aacfb82f1f620d1efd20a8e86
-EBUILD magus-1.3.3.ebuild 5321 RMD160 267d55e2c4e41b86ccc71278f39b8cfcce0cdc0c SHA1 437d7e6b6336e71cc67bfb3aaf58e31a43a57c6a SHA256 4782354c6a5fda5b8d7eb4607d286f15671708649cd4d34fb7a2345a9fc33b25
-EBUILD magus-99999999.ebuild 5321 RMD160 267d55e2c4e41b86ccc71278f39b8cfcce0cdc0c SHA1 437d7e6b6336e71cc67bfb3aaf58e31a43a57c6a SHA256 4782354c6a5fda5b8d7eb4607d286f15671708649cd4d34fb7a2345a9fc33b25
-MISC ChangeLog 3809 RMD160 92be5c133709930f271c7cf1249474fb372d43c9 SHA1 608655d09ea42ca658c09e660d217ef46107ef94 SHA256 f292c68ab06d0f609da82285bfe9738dd69cee5249e1d8f4381296343bcb529a
+EBUILD magus-1.3.3.ebuild 5498 RMD160 b3b8ca9b7f7fd08dc1063bcde6ffab8b85a4b6f9 SHA1 11adb6e94027d72148d6a1e8cbd826728166f096 SHA256 19829e4c777865f8f0468a97326c471d26df67dd7c0e6934c33ae1e8628a18f6
+EBUILD magus-99999999.ebuild 5498 RMD160 b3b8ca9b7f7fd08dc1063bcde6ffab8b85a4b6f9 SHA1 11adb6e94027d72148d6a1e8cbd826728166f096 SHA256 19829e4c777865f8f0468a97326c471d26df67dd7c0e6934c33ae1e8628a18f6
+MISC ChangeLog 3951 RMD160 71a466c166dc76ee48c01417bae9793a9f5990e6 SHA1 0d22afb89bcaff083a700fcd0a6d47c2eb165b1d SHA256 986e00c9174785250a549e26f278bd8fbb72c007b5b177ff46a146ed3c9583e4
 MISC metadata.xml 764 RMD160 1ad76763bf7957a7670d2687db95aee30cc31d3a SHA1 d88e606be5c43297666ed67cdd9a50bee3cc5ae7 SHA256 abda9737ebb13a3ee0438f2ab02f00623298c2a5c85d143199c7c1b5c80bb797
