@@ -4,6 +4,9 @@
 
 *magus-1.3.3 (28 May 2011)
 
+  30 Sep 2011; Martin Väth <martin@mvath.de>
+  Fix dependencies, in particular do not require optional media-gfx/pngcrush
+
   29 May 2011; Martin Väth <martin@mvath.de>
   Add REQUIRED_USE and fix some missing dependencies.
 
